# haskell-lambda

./: .gitignore  build  clean  deploy  hsmain.hs  invoke  main.js  package  test.js
haskell-lambda/: Dockerfile  haskell-lambda.cabal  stack.yaml
haskell-lambda/src/: Lib.hs
